# alphahuman

./: .env  .env.example  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  SECURITY.md  TODO.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  solo.yml  tailwind.config.js  tsconfig.e2e.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.claude/: memory.md
.github/: Dockerfile  Dockerfile.dockerignore  pull_request_template.md
.husky/: pre-push
ai/: TOOLS.md
app/: .env.example  .prettierrc  BIOME_FIXES_SUMMARY.md  BIOME_QUICK_REFERENCE.md  biome.json  eslint.config.js  knip.json  package.json  schema.json  tsconfig.json
app/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.sidecar.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/recipes/google-meet/: agent.js
app/src-tauri/src/: cef_preflight.rs  cef_profile.rs  core_process.rs  core_process_tests.rs  core_update.rs  lib.rs  mascot_native_window.rs  memory.rs  models.rs  openhuman_daemon.rs  tray.rs
app/src-tauri/src/cdp/: mod.rs  session.rs  slack_huddle_probe.rs
app/src-tauri/src/commands/: auth.rs  chat.rs  conscious_loop.rs  core_relay.rs  mod.rs  model.rs  openhuman.rs  runtime.rs  socket.rs
app/src-tauri/src/discord_scanner/: dom_snapshot.rs  mod.rs
app/src-tauri/src/gmail/: atom.rs  cdp_fetch.rs  mod.rs  notify_poll.rs  print_view.rs  reads.rs
app/src-tauri/src/imessage_scanner/: chatdb.rs  mod.rs
app/src-tauri/src/runtime/: mod.rs  qjs_engine.rs  socket_manager.rs
app/src-tauri/src/services/: mod.rs  notification_service.rs  socket_service.rs
app/src-tauri/src/slack_scanner/: extract.rs  idb.rs  mod.rs
app/src-tauri/src/unified_skills/: generator.rs  self_evolve.rs  skill_tester.rs
app/src-tauri/src/utils/: dev_paths.rs  mod.rs
app/src-tauri/src/webview_accounts/: call_session.rs  mod.rs  ua_spoof.js
app/src-tauri/src/whatsapp_scanner/: dom_snapshot.rs  mod.rs
deploy/: tauri_create_dmg.sh
docs/: ARCHITECTURE.md  AUTO_UPDATE.md  BUILDING.md  CODING_HARNESS.md  CREDENTIAL-PROXY-SPIKE.md  ENVIRONMENT-CONTRACT-ROADMAP.md  HYPERNYM-COGNEE-SPIKE.md  MEET_AGENT.md  ONBOARDING-AGENT.md  PROMPT_INJECTION_GUARD.md  RELEASE_POLICY.md  SUMMARY.md  TODO.md  conscious-loop.md  install.md  memory-sync-functions.md  sdk-rust-e2e-test-run.md  tinyhumansai-sdk.md  webview-integration-playbook.md
examples/: real_imessage_demo.rs
gitbooks/: README.md  (+1 more)
overlay/src-tauri/: Cargo.toml  tauri.conf.json
overlay/src-tauri/capabilities/: default.json
overlay/src-tauri/src/: lib.rs  log_bridge.rs  main.rs
(+1715 files in other folders)
