[package]
name = "openhuman-overlay"
version = "0.1.0"
description = "OpenHuman transparent overlay with debug log viewer"
authors = ["you"]
edition = "2021"

[lib]
name = "overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-log = "0.2"
chrono = "0.4"
parking_lot = "0.12"

# Core library — runs in-process (package name is "openhuman", lib name is "openhuman_core")
openhuman = { path = "../../" }
